--- a/xss-sanitize.cabal
+++ b/xss-sanitize.cabal
@@ -9,7 +9,7 @@ description:     run untrusted HTML through Text.HTML.SanitizeXSS.sanitizeXSS to
 
 category:        Web
 stability:       Stable
-cabal-version:   >= 1.8 
+cabal-version:   >= 1.10
 build-type:      Simple
 homepage:        http://github.com/yesodweb/haskell-xss-sanitize
 extra-source-files: README.md
@@ -20,11 +20,11 @@ flag network-uri
 
 library
     build-depends:    base == 4.*, containers
-                    , tagsoup     >= 0.12.2   && < 1
-                    , utf8-string >= 0.3      && < 1.1
-                    , css-text    >= 0.1.1    && < 0.2
-                    , text        >= 0.11     && < 2
-                    , attoparsec  >= 0.10.0.3 && < 1
+                    , tagsoup     
+                    , utf8-string 
+                    , css-text    
+                    , text        
+                    , attoparsec  
 
     if flag(network-uri)
       build-depends: network-uri >= 2.6
@@ -63,4 +63,4 @@ test-suite test
 
 source-repository head
   type:     git 
-  location: http://github.com/yesodweb/haskell-xss-sanitize.git
+  location: http://github.com/MackeyRMS/haskell-xss-sanitize.git
