--- a/xss-sanitize.cabal
+++ b/xss-sanitize.cabal
@@ -31,6 +31,7 @@ library
     else
       build-depends: network < 2.6
 
+    default-language: Haskell2010
     exposed-modules: Text.HTML.SanitizeXSS
     other-modules:   Text.HTML.SanitizeXSS.Css
     ghc-options:     -Wall
@@ -38,6 +39,7 @@ library
 executable xss-sanitize
   main-is:             Main.hs
   hs-source-dirs:      src
+  default-language: Haskell2010
   build-depends:       base
                      , xss-sanitize
                      , text
@@ -46,6 +48,7 @@ test-suite test
     type: exitcode-stdio-1.0
     main-is: test/main.hs
     cpp-options: -DTEST
+    default-language: Haskell2010
     build-depends:    base == 4.* , containers
                     , tagsoup     >= 0.12.2   && < 1
                     , utf8-string >= 0.3      && < 1.1
