--- a/xss-sanitize.cabal
+++ b/xss-sanitize.cabal
@@ -19,13 +19,24 @@ flag network-uri
   default: True
 
 library
-    build-depends:    base == 4.*, containers
+    hs-source-dirs:   src
+    build-depends:    base == 4.*
+                    , containers
                     , tagsoup     
                     , utf8-string 
                     , css-text    
                     , text        
                     , attoparsec  
-
+                    , protolude
+                    , exceptions
+                    , retry
+                    , aeson
+                    , resource-pool
+                    , time
+                    , mysql
+                    , mysql-simple
+                    , rms-mq
+                    
     if flag(network-uri)
       build-depends: network-uri >= 2.6
     else
@@ -33,16 +44,21 @@ library
 
     default-language: Haskell2010
     exposed-modules: Text.HTML.SanitizeXSS
-    other-modules:   Text.HTML.SanitizeXSS.Css
+                     Text.HTML.SanitizeXSS.Css
+                     PubSub
+                     DBConnect
     ghc-options:     -Wall
 
 executable xss-sanitize-mackey
   main-is:             Main.hs
-  hs-source-dirs:      src
+  other-modules:       Options
+  hs-source-dirs:      exec
   default-language: Haskell2010
   build-depends:       base
                      , xss-sanitize
                      , text
+                     , optparse-applicative 
+                     , rms-mq
 
 test-suite test
     type: exitcode-stdio-1.0
