--- a/xss-sanitize.cabal
+++ b/xss-sanitize.cabal
@@ -21,21 +21,26 @@ flag network-uri
 library
     hs-source-dirs:   src
     build-depends:    base == 4.*
-                    , containers
-                    , tagsoup     
-                    , utf8-string 
-                    , css-text    
-                    , text        
-                    , attoparsec  
-                    , protolude
-                    , exceptions
-                    , retry
                     , aeson
-                    , resource-pool
-                    , time
+                    , lens-aeson
+                    , attoparsec  
+                    , bytestring
+                    , containers
+                    , css-text    
+                    , exceptions
+                    , lens
                     , mysql
                     , mysql-simple
+                    , protolude
+                    , protolude
+                    , resource-pool
+                    , retry
                     , rms-mq
+                    , tagsoup     
+                    , text        
+                    , time
+                    , utf8-string 
+                    , wreq
                     
     if flag(network-uri)
       build-depends: network-uri >= 2.6
