pipeline working for the most part

--- a/xss-sanitize.cabal
+++ b/xss-sanitize.cabal
@@ -35,6 +35,7 @@ library
                     , protolude
                     , resource-pool
                     , retry
+                    , fast-logger
                     , rms-mq
                     , tagsoup     
                     , text        
