filter tags in Monad so we can flag content as Monadic side effect

--- a/xss-sanitize.cabal
+++ b/xss-sanitize.cabal
@@ -29,6 +29,7 @@ library
                     , css-text    
                     , exceptions
                     , lens
+                    , mtl
                     , mysql
                     , mysql-simple
                     , protolude
