Use HashSet for members instead of Set
Case-insensitive property name membership

--- a/xss-sanitize.cabal
+++ b/xss-sanitize.cabal
@@ -22,6 +22,7 @@ library
     hs-source-dirs:   src
     build-depends:    base == 4.*
                     , aeson
+                    , unordered-containers
                     , lens-aeson
                     , attoparsec  
                     , bytestring
